module/core/derive_tools/tests/inc/phantom/compiletime/invariant_type.stderr
error: lifetime may not live long enough
  --> tests/inc/phantom/compiletime/invariant_type.rs:11:3
   |
9  | fn assert_invariant< 'a >( x: InvariantType< *mut &'static str > ) -> InvariantType< *mut &'a str >
   |                      -- lifetime `'a` defined here
10 | {
11 |   x
   |   ^ returning this value requires that `'a` must outlive `'static`
   |
   = note: requirement occurs because of a mutable pointer to `&str`
   = note: mutable pointers are invariant over their type parameter
   = help: see <https://doc.rust-lang.org/nomicon/subtyping.html> for more information about variance
